// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders data 1`] = `
<Fragment>
  <Page
    cartItems={Array []}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={3}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        key="1"
        lg={3}
        md={3}
        sm={4}
        xl={2}
        xs={12}
      >
        <Item
          id={1}
          msrp={1}
          onAdd={[Function]}
          price={2}
          product="Product"
          soldOut={false}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Snackbar))
      autoHideDuration={3000}
      onClose={[Function]}
      open={false}
    >
      <WithStyles(ForwardRef(Alert))
        elevation={6}
        onClose={[Function]}
        severity="success"
        variant="filled"
      >
        Item added to Cart!
      </WithStyles(ForwardRef(Alert))>
    </WithStyles(ForwardRef(Snackbar))>
  </Page>
</Fragment>
`;

exports[`Home renders loading 1`] = `
<Fragment>
  <Page>
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <WithStyles(ForwardRef(Snackbar))
      autoHideDuration={3000}
      onClose={[Function]}
      open={false}
    >
      <WithStyles(ForwardRef(Alert))
        elevation={6}
        onClose={[Function]}
        severity="success"
        variant="filled"
      >
        Item added to Cart!
      </WithStyles(ForwardRef(Alert))>
    </WithStyles(ForwardRef(Snackbar))>
  </Page>
</Fragment>
`;
